@@ -1,4 +1,5 @@
 import sys
+
 sys.path.append("./sources/")
 
 from Preview import Preview
@@ -6,12 +7,9 @@ from InputWorker import InputWorker
 from ProxyWorker import ProxyWorker
 import Threads
 
-
-
 ###### PREVIEW ######
 
 Preview.do()
-
 
 ###### DATA INPUT ######
 
@@ -26,7 +24,7 @@ threadcount = inputs[4]
 
 if selected_proxy == True:
     proxies = ProxyWorker.AutoGrabber(pages)
-    Threads.ThreadsCreator(proxies,login,passwords,threadcount)
+    Threads.ThreadsCreator(proxies, login, passwords, threadcount)
 
 
 elif selected_proxy == False:
