@@ -1,9 +1,9 @@
-# Version 1.1 alpha
+# Version 1.2 alpha
 '''
 How to use:
     Example:
         type_of_proxy = 1 # 1 - http, 2 - https, 3 - socks4, 4 - socks5
-        proxycount = 5000 # Up to 10000 besides socks5(socks 5 up to 200)
+        proxycount = 5000 # There's a limit. Read https://www.proxy-list.download/
 
         a = BadParser(type_of_proxy,proxycount)
         data = a.Grab()
@@ -14,7 +14,7 @@ import requests
 
 class BadParser:
     def __init__(self, kind, count):
-        print('[BadParser v.1.0 alpha]\n')
+        print('[BadParser v.1.2 alpha]\n')
         if kind == 1:
             self.kind = 'http'
         elif kind == 2:
@@ -34,12 +34,17 @@ class BadParser:
         print('Getting done. Parsing started.')
         r = r.text.split('\r\n')
         for i in r:
-            if int(self.handled) < int(self.count):
+            if self.count == 'max':
                 if i != '':
                     self.proxy_list.append(i)
                     self.handled += 1
             else:
-                break
-        print('Work done.\n')
+                if int(self.handled) < int(self.count):
+                    if i != '':
+                        self.proxy_list.append(i)
+                        self.handled += 1
+                else:
+                    break
+        print('\nTotal parsed: {}\nWork done.\n'.format(self.handled))
         return self.proxy_list
 
